backend/k8s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: squad-api
  labels:
    app: squad
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: squad
      tier: backend
  template:
    metadata:
      labels:
        app: squad
        tier: backend
    spec:
      containers:
      - name: squad-backend
        image: 655059429848.dkr.ecr.us-east-1.amazonaws.com/jairsoncabral:squad-1.1
        ports:
        - containerPort: 8080
