backend/k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: squad-api
  labels:
    app: squad
    tier: backend
spec:
  selector:
    app: squad
    tier: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
